# GoIT_21_14

dz11/: .gitignore  main.py  pyproject.toml  requirements.txt
dz11/alembic/: env.py
dz11/docs/source/: conf.py  conf.rst  database.rst  index.rst  main.rst  modules.rst  repository.rst  routes.rst  schemas.rst  services.rst
dz11/src/conf/: config.py
dz11/src/database/: db.py  models.py
dz11/src/repository/: contacts.py  users.py
dz11/src/routes/: auth.py  contacts.py  users.py
dz11/src/schemas/: contacts.py  user.py
dz11/src/services/: auth.py  email.py  roles.py
dz11/tests/: conftest.py  test_repository_contacts.py  test_repository_users.py  test_router_auth.py
