[tool.poetry]
name = "dz11"
version = "0.1.0"
description = ""
authors = ["GievskiyIgor <121798393+GievskiyIgor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.40.0"
sphinx = "^7.3.7"
pytest = "^8.2.2"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
redis = "^5.0.6"
fastapi-limiter = "^0.1.6"
mako = "^1.3.5"
jinja2 = "^3.1.4"
patch = "^1.16"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
